﻿
Version 1.3 -

- Add options panel
- Add choice of reverting to legacy (pre-1.13) lifespan calculations
- Move custom logging selection to options panel


Version 1.2 -

- Update lifecycle scaling to match game version 1.13
- Reimplement probability calculations using exponential (rather than logarithmic) calcs for improved probability accuracy
- Add option custom logfiles to log deaths, immigrant details, and/or transportation probability results
- Code cleanup
- Logging tweaks


Version 1.1.1 -

- Fix minor error with Harmony migration of NewOutsideConnectionAI


Version 1.1 -

- Migrated from redirection to Harmony
- XML configuration files now saved when save games are loaded, not after exit (compatibility with 'instant exit' process killing)
- Update logging
- Introduced formal versioning


Version 1.0 (unlabeled) -

- Initial upload
- Add check for old mod (via Steam Workshop subscription)