@@ -1,4 +1,6 @@
-﻿
+﻿- Option panel changes now take effect immediately (not just on game load)
+
+
 Version 1.3 -
 
 - Add options panel
